Add United States!

--- a/UnitedStates/Tests/Tests.csproj
+++ b/UnitedStates/Tests/Tests.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitedStatesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UnitedStates\UnitedStates.csproj">
+      <Project>{30806D13-FECE-49A7-976E-B392C664FCF8}</Project>
+      <Name>UnitedStates</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
